--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,6 @@ yarn-error.log*
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
+!.elasticbeanstalk/config.yml
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
